--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/css/bootstrap-grid.min.css" />
-    <link rel="stylesheet" href="./src/css/bootstrap-grid.min.css" />
+    <link rel="stylesheet" href="./src/css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="./src/fonts/fonts.css" />
     <link rel="stylesheet" href="./src/css/style.min.css" />
     <title>Pulse</title>
@@ -25,7 +25,7 @@
             <a href="tel: +74999228974" class="header__phone"
               >+7 (499) 922-89-74</a
             >
-            <button class="button">заказать звонок</button>
+            <button class="button button_top">заказать звонок</button>
           </div>
         </header>
         <div class="promo__wrapper">
@@ -46,6 +46,11 @@
                 alt=""
               />Ответим на все вопросы
             </div>
+          </div>
+          <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+          <div class="promo__link">
+            или
+            <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
           </div>
         </div>
       </div>
