added 2nd section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./src/css/style.min.css" />
     <title>Pulse</title>
   </head>
+
   <body>
     <div class="promo">
       <div class="container">
@@ -55,5 +56,55 @@
         </div>
       </div>
     </div>
+    <section class="advantages">
+      <div class="container">
+        <div class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</div>
+        <div class="advantages__menu">
+          <div class="advantages__item">
+            <img
+              src="./src/icons/Advantages_cup.png"
+              alt=""
+              class="advantages__img"
+            />
+            <div class="advantages__header">Делимся опытом</div>
+            <div class="advantages__text">
+              Наши сотрудники всегда готовы<br />
+              поделиться своим опытом,<br />
+              так как сами бегают полумарафоны,<br />
+              переплыли Босфор, готовятся к<br />
+              соревнованиям по триатлону!
+            </div>
+          </div>
+          <div class="advantages__item">
+            <img
+              src="./src/icons/Advantages_heart.png"
+              alt=""
+              class="advantages__img"
+            />
+            <div class="advantages__header">Заботимся о здоровье</div>
+            <div class="advantages__text">
+              Мы работаем для того,<br />
+              чтобы Ваши занятия спортом шли на<br />
+              пользу Вашему здоровью и были в<br />
+              радость Вам и Вашим близким!
+            </div>
+          </div>
+          <div class="advantages__item">
+            <img
+              src="./src/icons/Advantages_shoe.png"
+              alt=""
+              class="advantages__img"
+            />
+            <div class="advantages__header">Учим бегать</div>
+            <div class="advantages__text">
+              Помогаем с обучением<br />
+              правильной технике бега!<br />
+              Дружим с крупнейшей школой бега в<br />
+              России - <a href="#">I LOVE RUNNING.</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
