--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="./src/css/bootstrap-grid.min.css" />
     <link rel="stylesheet" href="./src/css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="./src/fonts/fonts.css" />
+    <link rel="stylesheet" href="./src/css/slick.css" />
     <link rel="stylesheet" href="./src/css/style.min.css" />
+
     <title>Pulse</title>
   </head>
 
   <body>
-    <div class="promo">
+    <section class="promo">
       <div class="container">
         <header class="header">
           <a href="#" class="header__logo">
@@ -55,7 +57,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <section class="advantages">
       <div class="container">
         <div class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</div>
@@ -106,7 +108,7 @@
         </div>
       </div>
     </section>
-    <div class="consultation">
+    <section class="consultation">
       <div class="container">
         <h2 class="title title_left">
           Получите бесплатную консультацию<br />
@@ -129,6 +131,26 @@
           <button class="button button_submit">заказать консультацию</button>
         </form>
       </div>
-    </div>
+    </section>
+    <section class="carousel">
+      <div class="container">
+        <div class="carousel__inner">
+          <div><img src="./src/img/Slide_1.png" alt="slide1" /></div>
+          <div><img src="./src/img/Slide_2.png" alt="slide2" /></div>
+          <div><img src="./src/img/Slide_3.png" alt="slide3" /></div>
+        </div>
+      </div>
+    </section>
+
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-1.11.0.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+    <script src="/src/js/slick.min.js"></script>
+    <script src="/src/js/script.js"></script>
   </body>
 </html>
